<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_to_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/muli_bold"
                android:text="@string/fairmoney_technical"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_view_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                shimmer:duration="800">

                <!-- Adding 9 rows of placeholders -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />

                    <include layout="@layout/content_placeholder" />
                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>


            <LinearLayout
                android:id="@+id/content_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/users_list"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:fadingEdge="vertical"
                    android:fadingEdgeLength="10dp"
                    android:longClickable="true">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/net_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_error_outline_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_regular"
                    android:text="@string/network_error_swipe_to_refresh"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emptyElement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/ic_face_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_regular"
                    android:text="@string/no_result_found_nswipe_down_to_try_again"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>