<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shimmer="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="85dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        shimmer:duration="800">

        <!-- Adding 9 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/content_bottomsheet" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>


    <RelativeLayout
        android:id="@+id/content_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:id="@+id/view"
            android:layout_width="30dp"
            android:layout_height="5dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/swipe_up_handle" />


        <LinearLayout
            android:id="@+id/userDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ProfileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:src="@mipmap/ic_default_user" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_medium"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/fullName"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/FullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/muli_medium"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/gender"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/muli_medium"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/dateOfBirth"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/DOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/muli_medium"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/RegistrationDate"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/RegDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:fontFamily="@font/muli_medium"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/UserLocation"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="start|center"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userDetails"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/PhoneNumber"
                android:layout_width="0.5dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="6dp"
                app:cardElevation="1dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/muli_medium"
                    android:text="Call"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/phone"
                    app:srcCompat="@drawable/ic_phone"
                    app:tint="@color/blue" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/email"
                android:layout_width="0.5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="0.5"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="6dp"
                app:cardElevation="1dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/phone"
                    app:srcCompat="@drawable/ic_email"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/muli_medium"
                    android:text="Email"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
